--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@elysiajs/jwt": "^1.4.0",
     "elysia": "^1.4.19",
     "reflect-metadata": "^0.2.2"
   },
