--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@elysiajs/cors": "^1.4.1",
     "@elysiajs/jwt": "^1.4.0",
     "elysia": "^1.4.19",
     "node-cron": "^4.2.1",
