--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@elysiajs/jwt": "^1.4.0",
     "elysia": "^1.4.19",
     "node-cron": "^4.2.1",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "zod": "^4.3.2"
   },
   "repository": {
     "type": "git",
