--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@diariodaregiao/bunstone",
   "module": "index.ts",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "type": "module",
+  "bin": {
+    "bunstone": "./bin/cli.ts"
+  },
   "scripts": {
     "test": "bun test"
   },
