--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "@diariodaregiao/bunstone",
-  "module": "index.ts",
-  "version": "0.0.12",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "version": "0.0.13",
   "type": "module",
   "bin": {
     "bunstone": "./bin/cli.ts"
   },
+  "files": [
+    "dist",
+    "bin",
+    "README.md"
+  ],
   "scripts": {
+    "build": "rm -rf dist && bun build ./index.ts --outdir ./dist --target bun && tsc",
     "test": "bun test"
   },
   "devDependencies": {
