--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@elysiajs/cors": "^1.4.1",
     "@elysiajs/jwt": "^1.4.0",
+    "@elysiajs/swagger": "^1.3.1",
     "elysia": "^1.4.19",
     "node-cron": "^4.2.1",
     "reflect-metadata": "^0.2.2",
