--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "build": "rm -rf dist && bun build ./index.ts --outdir ./dist --target bun && tsc --emitDeclarationOnly --declaration --outDir dist",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:preview": "vitepress preview docs",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "prettier": "^3.7.4",
     "vitepress": "^1.6.4"
   },
   "peerDependencies": {
