chore(ci): add checking to code formatting

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,5 +28,8 @@ jobs:
       - name: Install Dependencies
         run: bun install
 
+      - name: Check Code Formatting
+        run: bun run format:check
+
       - name: Run Tests
         run: bun test
