feat: add mvc feature with react

--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -8,6 +8,7 @@
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
       "bunstone": ["../index.ts"]
