--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@elysiajs/cors": "^1.4.1",
     "@elysiajs/html": "^1.4.0",
     "@elysiajs/jwt": "^1.4.0",
+    "@elysiajs/static": "^1.4.7",
     "@elysiajs/swagger": "^1.3.1",
     "elysia": "^1.4.21",
     "node-cron": "^4.2.1",
