--- a/examples/package.json
+++ b/examples/package.json
@@ -10,7 +10,9 @@
     "start:db": "bun 05-database-sql/index.ts",
     "start:schedule": "bun 06-scheduling/index.ts",
     "start:adapters": "bun 07-adapters/index.ts",
-    "start:openapi": "bun 08-openapi/index.ts"
+    "start:openapi": "bun 08-openapi/index.ts",
+    "start:ssr": "bun 09-ssr/index.tsx",
+    "start:mvc": "bun 10-ssr-mvc/index.ts"
   },
   "dependencies": {
     "bunstone": "link:..",
