--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/nodemailer": "^7.0.5",
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
     "react": "^19.2.3",
@@ -39,8 +40,12 @@
     "@elysiajs/jwt": "^1.4.0",
     "@elysiajs/static": "^1.4.7",
     "@elysiajs/swagger": "^1.3.1",
+    "@react-email/components": "^1.0.4",
+    "@react-email/render": "^2.0.2",
+    "@react-email/tailwind": "^2.0.3",
     "elysia": "^1.4.21",
     "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.12",
     "reflect-metadata": "^0.2.2",
     "zod": "^4.3.2"
   },
