--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   ],
   "scripts": {
     "test": "bun test",
+    "coverage": "bun test --coverage",
     "build": "rm -rf dist && bun build ./index.ts --outdir ./dist --target bun --external react --external react-dom --external elysia --external @elysiajs/* && tsc --emitDeclarationOnly --declaration --outDir dist",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
