--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "main": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "version": "0.2.1g",
+  "version": "0.2.1",
   "homepage": "https://bunstone.diario.one/",
   "type": "module",
   "bin": {
