--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.11",
     "@types/bun": "latest",
     "@types/nodemailer": "^7.0.5",
     "@types/react": "^19.2.8",
