--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
+    "lint": "biome check .",
+    "lint:fix": "biome check --write .",
+    "format": "biome format . --write",
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
