--- a/starter/package.json
+++ b/starter/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "bun run src/main.ts",
     "dev": "bun --watch src/main.ts",
-    "test": "bun test"
+    "test": "bun test",
+    "lint": "biome check .",
+    "lint:fix": "biome check --write .",
+    "format": "biome format . --write"
   },
   "dependencies": {
     "@elysiajs/html": "^1.4.0",
@@ -17,6 +20,7 @@
     "zod": "^4.3.2"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.11",
     "@types/bun": "latest",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0"
