--- a/biome.json
+++ b/biome.json
@@ -6,7 +6,8 @@
 			},
 			"complexity": {
 				"noBannedTypes": "off",
-				"noArguments": "off"
+				"noArguments": "off",
+				"noStaticOnlyClass": "off"
 			},
 			"correctness": {
 				"noUnusedImports": "error"
