--- a/package.json
+++ b/package.json
@@ -38,14 +38,20 @@
     "lint": "biome check .",
     "lint:fix": "biome check --write .",
     "format": "biome format . --write",
+    "benchmark": "bun run ./benchmarks/run.ts",
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.11",
+    "@types/autocannon": "^7.12.7",
     "@types/bun": "latest",
+    "@types/express": "^5.0.6",
     "@types/nodemailer": "^7.0.5",
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
+    "autocannon": "^8.0.0",
+    "express": "^5.2.1",
+    "fastify": "^5.6.2",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "vitepress": "^1.6.4"
@@ -61,6 +67,10 @@
     "@elysiajs/jwt": "^1.4.0",
     "@elysiajs/static": "^1.4.7",
     "@elysiajs/swagger": "^1.3.1",
+    "@nestjs/common": "^11.1.11",
+    "@nestjs/core": "^11.1.11",
+    "@nestjs/platform-express": "^11.1.11",
+    "@nestjs/platform-fastify": "^11.1.11",
     "@react-email/components": "^1.0.4",
     "@react-email/render": "^2.0.2",
     "@react-email/tailwind": "^2.0.3",
@@ -68,6 +78,7 @@
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.12",
     "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.2",
     "zod": "^4.3.2"
   },
   "publishConfig": {
