chore: remove unused import

--- a/biome.json
+++ b/biome.json
@@ -16,7 +16,8 @@
 			},
 			"complexity": {
 				"noBannedTypes": "off",
-				"noArguments": "off"
+				"noArguments": "off",
+				"noStaticOnlyClass": "off"
 			},
 			"correctness": {
 				"noUnusedImports": "error"
